# beeai-requirement-agent-examples

./: .env.example  .gitignore  LICENSE  README.md  presentation.md  pyproject.toml
examples/: 01_context_before_tool.py  02_exact_tool_usage.py  03_start_with_analysis.py  04_retry_rephrasing.py  05_multiagent_handoff.py  06_react_loop.py  07_tool_dependency.py  08_final_action.py  09_permission_required.py  10_safety_stop.py  __init__.py  utils.py
